# Mneme

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  MEMORY.md  README.md  mneme.example.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml
crates/mneme_bench/: Cargo.toml
crates/mneme_bench/src/: lib.rs
crates/mneme_browser/: Cargo.toml
crates/mneme_browser/src/: action.rs  client.rs  lib.rs
crates/mneme_cli/: Cargo.toml
crates/mneme_cli/src/: compose_tool.rs  connect_tool.rs  discover_tool.rs  main.rs  metrics.rs  schedule_tool.rs
crates/mneme_cli/tests/: smoke_tests.rs
crates/mneme_core/: Cargo.toml
crates/mneme_core/src/: affect.rs  config.rs  dynamics.rs  encrypt.rs  errors.rs  lib.rs  persona.rs  prelude.rs  safety.rs  sentiment.rs  state.rs  tools.rs  values.rs
crates/mneme_core/tests/: property_tests.rs
crates/mneme_expression/: Cargo.toml
crates/mneme_expression/src/: attention.rs  boredom.rs  consciousness.rs  creativity.rs  curiosity.rs  habits.rs  knowledge.rs  lib.rs  meaning.rs  metacognition.rs  presence.rs  rumination.rs  scheduled.rs  social.rs
crates/mneme_gateway/: Cargo.toml
crates/mneme_gateway/src/: lib.rs  server.rs  types.rs
crates/mneme_gateway/tests/: http_integration.rs
crates/mneme_limbic/: Cargo.toml
crates/mneme_limbic/src/: heartbeat.rs  lib.rs  neural.rs  somatic.rs  surprise.rs  system.rs
crates/mneme_limbic/tests/: property_tests.rs
crates/mneme_mcp/: Cargo.toml
crates/mneme_mcp/src/: bridge.rs  config.rs  lib.rs  manager.rs
crates/mneme_memory/: Cargo.toml
crates/mneme_memory/migrations/: 20240101000000_initial_schema.sql  20240102000000_episode_pinned.sql  20240103000000_learned_neural.sql  20240104000000_learned_dynamics.sql  20240105000000_recent_messages.sql  20240106000000_created_artifacts.sql  20240107000000_learned_ltc.sql  20240108000000_artifact_content_hash.sql  20240109000000_experience_replay.sql
crates/mneme_memory/src/: consolidation.rs  coordinator.rs  dream.rs  embedding.rs  feedback_buffer.rs  goals.rs  learning.rs  lib.rs  narrative.rs  rules.rs  sqlite.rs  tests.rs
crates/mneme_memory/tests/: coordinator_integration.rs
crates/mneme_onebot/: Cargo.toml
crates/mneme_onebot/src/: client.rs  event.rs  lib.rs
crates/mneme_onebot_bridge/: Cargo.toml
crates/mneme_onebot_bridge/src/: main.rs
crates/mneme_os/: Cargo.toml
crates/mneme_os/src/: lib.rs  local.rs  ssh.rs
crates/mneme_perception/: Cargo.toml
crates/mneme_perception/src/: lib.rs  rss.rs  source.rs  web.rs
crates/mneme_reasoning/: Cargo.toml
crates/mneme_reasoning/src/: agent_loop.rs  anthropic.rs  api_types.rs  context.rs  decision.rs  engine.rs  extraction.rs  lib.rs  llm.rs  metacognition.rs  prompts.rs  response_cache.rs  retry.rs  router.rs  scheduler.rs  text_tool_parser.rs  token_budget.rs  tool_registry.rs  tools.rs
crates/mneme_reasoning/src/providers/: anthropic.rs  mock.rs  mod.rs  ollama.rs  openai.rs  sse.rs
crates/mneme_reasoning/tests/: engine_tests.rs  llm_integration.rs  property_tests.rs
crates/mneme_reasoning/tests/common/: mod.rs
crates/mneme_voice/: Cargo.toml
crates/mneme_voice/src/: lib.rs  stt.rs  tts.rs
doc/: MANIFESTO.md  MnemeBench.md  MnemeBench_v2_draft.md  PHASE2_GAP.md  PHILOSOPHY.md  ROADMAP.md  VISION.md  architecture_whitepaper.md  design.md  discussion_summary.md  evaluation.md  grafana-dashboard.json  me.md  neural_dynamics_discussion.md  neural_dynamics_discussion_zh.md
log/bench/: bench_chat.sh  bench_phase2_log.md  bench_phase2_run.md  bench_phase2_run.sh
log/live/run_2026-03-05_v5/: ANALYSIS.md  mneme_v5.toml
persona/: broca.md  cortex.md  hippocampus.md  infrastructure.md  limbic.md  occipital.md  somatic.md  system_knowledge.md
persona_alt/: broca.md  cortex.md  hippocampus.md  limbic.md  occipital.md
