[workspace]
resolver = "2"

members = [
    "crates/mneme_core",
    "crates/mneme_limbic",
    "crates/mneme_memory",
    "crates/mneme_reasoning",
    "crates/mneme_perception",
    "crates/mneme_cli",
    "crates/mneme_expression",
    "crates/mneme_onebot",
    "crates/mneme_voice",
    "crates/mneme_mcp",
    "crates/mneme_gateway",
]
