[package]
name = "mneme_core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
async-trait = "0.1"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
arc-swap = "1.7"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
chacha20poly1305 = "0.10"
rand = "0.8"
base64 = "0.22"

[dev-dependencies]
proptest = "1.4"
