[package]
name = "mneme_memory"
version = "0.1.0"
edition = "2021"

[dependencies]
mneme_core = { path = "../mneme_core" }
mneme_limbic = { path = "../mneme_limbic" }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
fastembed = "4"
bincode = "1.3"
rand = "0.9.2"
chrono = "0.4.43"
sqlite-vec = "0.1"
libsqlite3-sys = { version = "0.27", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
