[package]
name = "mneme_onebot"
version = "0.1.0"
edition = "2021"

[dependencies]
mneme_core = { path = "../mneme_core" }
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tracing = "0.1"

