[package]
name = "mneme_onebot_bridge"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "onebot-bridge"
path = "src/main.rs"

[dependencies]
mneme_onebot = { path = "../mneme_onebot" }
mneme_gateway = { path = "../mneme_gateway" }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
clap = { version = "4", features = ["derive", "env"] }
