[package]
name = "mneme_perception"
version = "0.1.0"
edition = "2021"

[dependencies]
mneme_core = { path = "../mneme_core" }
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
rss = "2.0"
url = "2.4"
readability = "0.3.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
wiremock = "0.5"
