[package]
name = "mneme_reasoning"
version = "0.1.0"
edition = "2021"

[dependencies]
mneme_core = { path = "../mneme_core" }
mneme_limbic = { path = "../mneme_limbic" }
mneme_memory = { path = "../mneme_memory" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
tracing = "0.1"
regex = "1.10"
futures-util = "0.3"
bytes = "1"
mneme_os = { path = "../mneme_os" }
mneme_browser = { path = "../mneme_browser" }
chrono = "0.4"
uuid = { version = "1.0", features = ["v4", "v5"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
proptest = "1.4"
